<resources>
    <string name="app_name">Quiz Time</string>
    <string name="welcome_to_quiz_app">WELCOME TO QUIZ TIME</string>
    <string name="what_should_we_call_you">What should we call you?</string>
    <string name="hint_name">Name:</string>
    <string name="well_played_ivan">Well played Ivan</string>
    <string name="score">Score</string>
    <string name="your_score_was_70_points">Your score was 70 points</string>
    <string name="_60">60</string>
    <string name="what_are_the_sumbols">What are the symbols?</string>
    <string name="my_string"> Questions <b>%1$d</b>/10</string>
    <string name="ad_id">ca-app-pub-1456759243536077~4647217281</string>
    <string name="ad_id_banner_live">ca-app-pub-1456759243536077/8029441984</string>
    <string name="ad_id_interstitial_live">ca-app-pub-1456759243536077/8907409380</string>
    <string name="test_ad_id">cca-app-pub-3940256099942544/6300978111</string>
    <string name="test_ad_id_2">ca-app-pub-3940256099942544/1033173712</string>
</resources>