<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/headerConstraint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/backgroundColor"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/trophyImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/m_20dp"
                android:src="@drawable/trophy"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/playerName"
                style="@style/textStyle20"
                android:layout_width="@dimen/m_0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/m_20dp"
                android:layout_marginTop="@dimen/m_20dp"
                android:layout_marginBottom="@dimen/m_40dp"
                android:gravity="center"
                android:text="@string/well_played_ivan"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/trophyImage" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="@dimen/m_0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/m_30dp"
            android:layout_marginTop="-20dp"
            android:layout_marginBottom="@dimen/m_20dp"
            android:paddingHorizontal="@dimen/m_16dp"
            android:paddingVertical="@dimen/m_20dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="@dimen/m_16dp"
            app:cardElevation="@dimen/m_5dp"
            app:layout_constraintBottom_toTopOf="@id/takeAnotherShot"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/headerConstraint"
            app:layout_constraintVertical_bias="0">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/m_20dp">

                <TextView
                    android:id="@+id/scoreTitle"
                    style="@style/textStyle20"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/m_10dp"
                    android:drawablePadding="@dimen/m_5dp"
                    android:gravity="center"
                    android:text="@string/score"
                    android:textColor="@color/subBlack"
                    app:drawableStartCompat="@drawable/ic_rate_24"
                    app:layout_constraintBottom_toTopOf="@id/progressBar"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ProgressBar
                    android:id="@+id/progressBar"
                    style="@style/CircularDeterminateProgressBar"
                    android:layout_width="@dimen/m_200dp"
                    android:layout_height="@dimen/m_200dp"
                    android:layout_marginVertical="@dimen/m_20dp"
                    android:progress="60"
                    app:layout_constraintBottom_toTopOf="@id/pointInfo"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/scoreTitle" />

                <TextView
                    android:id="@+id/progressPoint"
                    android:layout_width="@dimen/m_0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/m_10dp"
                    android:fontFamily="@font/poppins_bold_700"
                    android:gravity="center"
                    android:text="@string/_60"
                    android:textColor="@color/subBlack"
                    android:textSize="30sp"
                    app:layout_constraintBottom_toBottomOf="@id/progressBar"
                    app:layout_constraintEnd_toEndOf="@id/progressBar"
                    app:layout_constraintStart_toStartOf="@id/progressBar"
                    app:layout_constraintTop_toTopOf="@id/progressBar" />

                <TextView
                    android:id="@+id/pointInfo"
                    style="@style/textStyle16"
                    android:layout_width="@dimen/m_0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/m_10dp"
                    android:fontFamily="@font/poppins_bold_700"
                    android:gravity="center"
                    android:text="@string/your_score_was_70_points"
                    android:textColor="@color/subBlack"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/progressBar" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <include
            android:id="@+id/takeAnotherShot"
            layout="@layout/layout_button_component"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/m_20dp"
            android:layout_marginBottom="@dimen/m_30dp"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>